OO-3366: option to show the max score of an assessment item in test